# pc_app

./: CMakeLists.txt  Makefile  README.md  build.bat  libusb.h  main.c  usb_api.c  usb_api.h  usb_control.c  usb_control.h  usb_control.lib
test/: build_test.bat  test.c  test_usb.py
